Fix projects flex wrap. Add + button

--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ h2 {
 .projects {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .projects-section-title {
